name:                untypedLambda
version:             0.1.0.0
-- synopsis:
-- description:
author:              Callan McGill
maintainer:          callan.mcgill@gmail.com
-- copyright:
category:            
build-type:          Simple
cabal-version:       >=1.10

executable untypedLambda
    main-is:             main.hs
    other-modules:       LambdaCalc
                       , DeBruijn
                       , Conversion
    build-depends:       base >= 4.7 && < 5.0
                       , containers >= 0.5.10
                       , extra >= 1.1
    hs-source-dirs:      src
    ghc-options:         
    default-language:    Haskell2010